# lesson6_m

matrix/: CMakeLists.txt
matrix/src/: main.cpp  matrix.cpp  matrix.h
